fix spacing

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -22,6 +22,10 @@ body {
   }
 }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: bold ;
+}
+
 
 $win95-ui-main-color: #c3c7cb;
 $win95-ui-highlight-color: white;
